# QRit

./: .gitignore  .travis.yml  README.md  com.github.sergius02.qrit.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: com.github.sergius02.qrit.appdata.xml.in  com.github.sergius02.qrit.contract  com.github.sergius02.qrit.desktop.in  meson.build
debian/: changelog  control  copyright
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.sergius02.qrit.pot  es.po  ja.po  meson.build  nl.po  ru.po
resources/: com.github.sergius02.qrit.xml  meson.build
resources/ui/: file_chooser.ui  headerbar.ui  qrit.glade  qrit.glade~  qrit.ui
src/: Application.vala  Config.vala.in  Main.vala  QRitUtils.vala  meson.build
src/widgets/: FileChooser.vala  HeaderBar.vala  Window.vala
